force-app/main/default/objects/NAS_IMC_SF_Type_Category_Mapping__mdt/NAS_IMC_SF_Type_Category_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Mapping between IMC Type &amp; Category and Salesforce Type &amp; Category</description>
    <label>NAS_IMC SF Type Category Mapping</label>
    <pluralLabel>NAS_IMC SF Type Category Mappings</pluralLabel>
</CustomObject>