force-app/main/default/objects/NAS_IMC_SF_Type_Category_Mapping__mdt/fields/NAS_IMC_Type__c.field-meta.xml
<CustomField>
    <fullName>NAS_IMC_Type__c</fullName>
    <label>IMC Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>