force-app/main/default/objects/NAS_IMC_SF_Type_Category_Mapping__mdt/fields/NAS_Owner_Queue__c.field-meta.xml
<CustomField>
    <fullName>NAS_Owner_Queue__c</fullName>
    <label>Owner Queue</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>