force-app/main/default/objects/NAS_IMC_SF_Type_Category_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>NAS_IMC_Type__c</columns>
    <columns>NAS_IMC_Category__c</columns>
    <columns>NAS_SF_Type__c</columns>
    <columns>NAS_SF_Category__c</columns>
    <columns>NAS_Owner_Queue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>